--- a/products.html
+++ b/products.html
@@ -558,6 +558,7 @@
         <h5 class="white-text">Contact</h5>
         <ul class="footer-contacts">
           <li class="white-text"><i class="material-icons margin-xs-right">mail</i>aqualuxy.kannur@gmail.com</li>
+          <li class="white-text"><i class="material-icons margin-xs-right">mail</i>theerthamknr@gmail.com</li>
           <li class="white-text"><i class="material-icons margin-xs-right">call</i>+91-9526333770</a></li>
           <li class="white-text"><i class="material-icons margin-xs-right">call</i>+91-9525333770</a></li>
         </ul>
@@ -580,14 +581,14 @@ $(document).ready(function () {
 })
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125501438-1"></script> -->
-<!-- <script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125501438-1"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'UA-125501438-1');
-</script> -->
+</script>
 
 </body>
 
